--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     ".": "./index.js"
   },
   "scripts": {
-    "prelint": "git ls-files | xargs eclint check",
     "lint": "eslint \"**/*.js\" --cache --max-warnings 0",
     "upgradeAll": "npm-check-updates --packageFile ./package.json -u"
   },
@@ -19,16 +18,15 @@
   "license": "MIT",
   "author": "Neolution",
   "dependencies": {
-    "@next/eslint-plugin-next": "^12.3.1",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.39.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-import-resolver-typescript": "^3.5.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.3.6",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.31.8",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "@next/eslint-plugin-next": "^14.2.5",
+    "@typescript-eslint/eslint-plugin": "^8.0.1",
+    "@typescript-eslint/parser": "^8.0.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "prettier": "^3.3.3"
   },
   "peerDependencies": {
     "eslint": "^8.20.0"
@@ -36,7 +34,9 @@
   "devDependencies": {
     "eclint": "^2.8.1",
     "eslint": "^8.24.0",
-    "npm-check-updates": "^16.3.8",
-    "typescript": "^4.8.4"
-  }
+    "globals": "^15.9.0",
+    "npm-check-updates": "^17.0.6",
+    "typescript": "^5.5.4"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
