--- a/.github/workflows/pkg.pr.new.yml
+++ b/.github/workflows/pkg.pr.new.yml
@@ -17,8 +17,8 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
 
-      - run: yarn --frozen-lockfile
+      - run: yarn --frozen-lockfile --ignore-engines
 
       - run: npx pkg-pr-new publish
