--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "This package provides Neolution's .eslintrc as an extensible shared config.",
   "homepage": "https://github.com/neolution-ch/eslint-config-neolution",
   "main": "index.js",
+  "type": "module",
   "exports": {
     ".": "./index.js"
   },
   "scripts": {
-    "prelint": "git ls-files | xargs eclint check",
-    "lint": "eslint \"**/*.js\" --cache --max-warnings 0",
+    "lint": "eslint --cache --max-warnings 0",
     "upgradeAll": "npm-check-updates --packageFile ./package.json -u"
   },
   "repository": {
@@ -19,24 +19,27 @@
   "license": "MIT",
   "author": "Neolution",
   "dependencies": {
-    "@next/eslint-plugin-next": "^12.3.1",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.39.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-import-resolver-typescript": "^3.5.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.3.6",
+    "@next/eslint-plugin-next": "^15.1.4",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsdoc": "^50.4.3",
     "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.31.8",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-unicorn": "^56.0.1",
+    "eslint": "^9.18.0",
+    "typescript-eslint": "^8.20.0"
   },
   "peerDependencies": {
-    "eslint": "^8.20.0"
+    "eslint": "^9.18.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.18.0",
     "eclint": "^2.8.1",
-    "eslint": "^8.24.0",
+    "eslint-config-prettier": "^10.0.1",
     "npm-check-updates": "^16.3.8",
+    "prettier": "^3.4.2",
     "typescript": "^4.8.4"
   }
 }
