--- a/package.json
+++ b/package.json
@@ -21,9 +21,6 @@
   "dependencies": {
     "@next/eslint-plugin-next": "^15.1.4",
     "eslint": "^9.18.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsdoc": "^50.4.3",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^5.2.2",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
@@ -38,6 +35,7 @@
     "@eslint/js": "^9.18.0",
     "eclint": "^2.8.1",
     "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import-x": "^4.6.1",
     "npm-check-updates": "^16.3.8",
     "prettier": "^3.4.2",
     "typescript": "^4.8.4"
