--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This package provides Neolution's .eslintrc as an extensible shared config.",
   "homepage": "https://github.com/neolution-ch/eslint-config-neolution",
   "main": "index.js",
-  "type": "commonjs",
+  "type": "module",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
