--- a/package.json
+++ b/package.json
@@ -6,14 +6,10 @@
   "main": "index.js",
   "type": "module",
   "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
-    },
+    ".": "./src/index.mjs",
     "./package.json": "./package.json"
   },
   "scripts": {
-    "build": "tsc -b tsconfig.json",
     "lint": "eslint --cache --max-warnings 0",
     "upgradeAll": "npm-check-updates --packageFile ./package.json -u"
   },
