--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@eslint/eslintrc": "^3.2.0",
     "@next/eslint-plugin-next": "^15.1.4",
     "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-import-x": "^4.6.1",
+    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.2",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
