--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "author": "Neolution",
   "dependencies": {
+    "@eslint/compat": "^1.2.5",
     "@eslint/eslintrc": "^3.2.0",
     "@next/eslint-plugin-next": "^15.1.4",
     "eslint-config-prettier": "^10.0.1",
