--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "./package.json": "./package.json"
   },
   "scripts": {
-    "lint": "eslint --cache --max-warnings 0",
+    "lint": "eslint --cache",
     "upgradeAll": "npm-check-updates --packageFile ./package.json -u"
   },
   "repository": {
@@ -27,7 +27,9 @@
     "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-cypress": "^4.1.0",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsdoc": "^50.6.3",
     "eslint-plugin-no-only-tests": "^3.3.0",
+    "eslint-plugin-only-error": "^1.0.2",
     "eslint-plugin-prettier": "^5.2.2",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
