--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -46,6 +46,7 @@ jobs:
           cache: "yarn"
           registry-url: "https://registry.npmjs.org"
       - run: yarn install --frozen-lockfile
+      - run: yarn tsc
       - run: yarn publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN_NEOLUTION }}
