--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.3.0",
   "description": "This package provides Neolution's .eslintrc as an extensible shared config.",
   "homepage": "https://github.com/neolution-ch/eslint-config-neolution",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "type": "module",
   "exports": {
     ".": "./dist/index.js",
