--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "1.3.0",
   "description": "This package provides Neolution's .eslintrc as an extensible shared config.",
   "homepage": "https://github.com/neolution-ch/eslint-config-neolution",
-  "main": "./dist/index.js",
   "type": "module",
   "exports": {
-    ".": "./dist/index.js",
-    "./package.json": "./package.json"
+    "./package.json": "./package.json",
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.modern.js",
+      "require": "./dist/index.js"
+    }
   },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist/*"
   ],
