--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,12 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "NodeNext",
+    "lib": ["ES2024", "DOM"],
     "declaration": true,
+    "declarationMap": true,
     "checkJs": true,
     "sourceMap": true,
-    "outDir": "./dist",
-    "removeComments": true,
+    "outDir": "dist/",
     "strict": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
@@ -15,7 +16,8 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "esModuleInterop": true,
-    "moduleResolution": "nodenext"
+    "moduleResolution": "nodenext",
+    "allowSyntheticDefaultImports": true
   },
   "include": ["src"],
   "compileOnSave": true,
