--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "eslint-plugin-unicorn": "^56.0.1",
     "typescript-eslint": "^8.20.0"
   },
-  "peerDependencies": {},
+  "peerDependencies": {
+    "eslint": "^9.0.0"
+  },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
     "@types/eslint-config-prettier": "^6.11.3",
