--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -2,51 +2,85 @@ name: Create Release
 
 on:
   workflow_dispatch:
+    inputs:
+      version_type:
+        type: choice
+        description: Semantic Version Type
+        options:
+          - major
+          - minor
+          - patch
+          - no-version-update
+
+      pre_release:
+        type: choice
+        description: Pre Rlease?
+        options:
+          - stable
+          - alpha
+          - beta
+          - rc
+
+      is_dry_run:
+        type: boolean
+        description: Dry Run
+        default: false
+        required: false
 
 jobs:
-  create-github-release:
+  release-it:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code
-        uses: actions/checkout@v3
-
-      - name: Initialize mandatory git config
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email noreply@github.com
-
-      - name: Setup release information
-        run: |
-          echo "PACKAGE_VERSION=$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[",]//g')" >> $GITHUB_ENV
-
-      - name: Extract release notes
-        id: extract_release_notes
-        uses: ffurrer2/extract-release-notes@v1
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: tibdex/github-app-token@v2
+        id: generate-token
         with:
-          tag_name: ${{ env.PACKAGE_VERSION }}
-          release_name: v${{ env.PACKAGE_VERSION }}
-          body: ${{ steps.extract_release_notes.outputs.release_notes }}
-          draft: false
-          prerelease: false
+          app_id: ${{ secrets.RELEASE_BOT_APP_ID }}
+          private_key: ${{ secrets.RELEASE_BOT_APP_PRIVATE_KEY }}
 
-  publish-npm:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: checkout
+        uses: actions/checkout@v4
         with:
-          node-version: 18
-          cache: "yarn"
-          registry-url: "https://registry.npmjs.org"
-      - run: yarn install --frozen-lockfile
-      - run: yarn tsc
-      - run: yarn publish --access public
+          token: ${{ steps.generate-token.outputs.token }}
+          # we need everything so release-it can compare the current version with the latest tag
+          fetch-depth: 0
+
+      - name: initialize mandatory git config
+        run: |
+          git config user.name "GitHub Release Bot"
+          git config user.email release-bot@neolution.ch
+
+      - name: install yarn packages
+        run: |
+          yarn --frozen-lockfile
+
+      - name: set NPM Token
+        run: |
+          echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > .npmrc
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN_NEOLUTION }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN_NEOLUTION }}
+
+      - name: run release-it
+        run: |
+          params=()
+
+          if [[ ${{ github.event.inputs.version_type }} != "no-version-update" ]]; then
+              params+=(${{ github.event.inputs.version_type }})
+          fi
+
+          if [[ ${{ github.event.inputs.pre_release }} != "stable" ]]; then
+              params+=(--preRelease=${{ github.event.inputs.pre_release }})
+              params+=(--plugins.@release-it/keep-a-changelog.keepUnreleased)
+              params+=(--no-plugins.@release-it/keep-a-changelog.strictLatest)
+          fi
+
+          if [[ ${{ github.event.inputs.is_dry_run }} == "true" ]]; then
+              params+=(--dry-run)
+          fi
+
+          params+=(--ci)
+
+          echo "command: release-it ${params[@]}"
+
+          yarn release-it "${params[@]}"
+        env:
+          GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
