--- a/package.json
+++ b/package.json
@@ -49,12 +49,15 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
+    "@release-it/keep-a-changelog": "^6.0.0",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__eslintrc": "^2.1.2",
     "eslint": "^9.18.0",
     "npm-check-updates": "^16.3.8",
     "prettier": "^3.4.2",
+    "release-it": "^18.1.2",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
