--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v4
         with:
-          node-version: lts
+          node-version: 22
           cache: "yarn"
       - run: yarn install --frozen-lockfile
       - run: yarn lint
