--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-cypress": "^4.1.0",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-jsdoc": "^50.6.3",
     "eslint-plugin-no-only-tests": "^3.3.0",
     "eslint-plugin-only-error": "^1.0.2",
