--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@release-it/keep-a-changelog": "^6.0.0",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__eslintrc": "^2.1.2",
+    "@types/node": "^22.15.32",
     "eslint": "^9.18.0",
     "npm-check-updates": "^16.3.8",
     "prettier": "^3.4.2",
