--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@eslint/eslintrc": "^3.2.0",
     "@next/eslint-plugin-next": "^15.1.4",
     "eslint-config-prettier": "^10.0.1",
+    "eslint-formatter-visualstudio": "^8.40.0",
     "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-cypress": "^4.1.0",
     "eslint-plugin-import": "^2.31.0",
